--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,14 +38,16 @@ flutter:
 
   assets:
      - assets/images/
+     - assets/images/onboarding/
 
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+     - family: Inter
+       fonts:
+         - asset: fonts/Inter-Regular.ttf
+         - asset: fonts/Inter-Medium.ttf
+         - asset: fonts/Inter-Bold.ttf
+         - asset: fonts/Inter-Black.ttf
 
 flutter_icons:
   android: "launcher_icon"
