--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   get_it: ^7.6.4
   smooth_page_indicator: ^1.1.0
   flutter_launcher_icons: ^0.13.1
+  shared_preferences: ^2.2.2
+  pie_chart: ^5.4.0
 
   cupertino_icons: ^1.0.2
 
@@ -37,17 +39,20 @@ flutter:
   uses-material-design: true
 
   assets:
-     - assets/images/
-     - assets/images/onboarding/
+    - assets/images/
+    - assets/images/onboarding/
+    - assets/images/tab-icons/
+    - assets/images/elements/
+    - assets/images/profile/
 
 
   fonts:
-     - family: Inter
-       fonts:
-         - asset: fonts/Inter-Regular.ttf
-         - asset: fonts/Inter-Medium.ttf
-         - asset: fonts/Inter-Bold.ttf
-         - asset: fonts/Inter-Black.ttf
+    - family: Inter
+      fonts:
+        - asset: fonts/Inter-Regular.ttf
+        - asset: fonts/Inter-Medium.ttf
+        - asset: fonts/Inter-Bold.ttf
+        - asset: fonts/Inter-Black.ttf
 
 flutter_icons:
   android: "launcher_icon"
