--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ flutter:
     - assets/images/tab-icons/
     - assets/images/elements/
     - assets/images/profile/
+    - assets/images/news/
 
 
   fonts:
